--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -9,10 +9,6 @@ import { Icon } from 'astro-icon/components';
 
 <footer class="animate">
   <Container>
-    <div class="relative">
-      <div class="absolute right-0 -top-20">
-      </div>
-    </div>
     <div class="flex justify-between items-center">
       <div>
         <Link
@@ -25,11 +21,12 @@ import { Icon } from 'astro-icon/components';
           2024 | {SITE.NAME}
         </Link>
       </div>
-      <div class="flex flex-wrap gap-1 items-center justify-end">
-        <div class="flex-grow-0 transition-all duration-300 ease-in-out">
-          <ColorModeButton />
-        </div>
-        <div class="flex-grow-0 transition-all duration-300 ease-in-out opacity-0 pointer-events-none" id="back-to-top-wrapper">
+      <div class="button-group">
+        <ColorModeButton />
+        <div
+          id="back-to-top-wrapper"
+          transition:persist
+        >
           <Button id="back-to-top" arrow="up">Back to top</Button>
         </div>
       </div>
