--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -9,6 +9,7 @@ export interface Props {
   style?: string
   underline?: boolean
   externalInNewTab?: boolean
+  prefetch?: boolean
 }
 
 const {
@@ -16,15 +17,19 @@ const {
   title,
   externalInNewTab,
   underline = true,
+  prefetch = true,
   class: className,
   ...rest
-} = Astro.props;
+} = Astro.props
+
+const shouldPrefetch = prefetch && href.startsWith('/');
 ---
 
 <AstroLink
   href={href}
   title={title}
   externalInNewTab={externalInNewTab}
+  data-astro-prefetch={shouldPrefetch ? 'hover' : undefined}
   class={cn(
     'inline-block transition-colors duration-300 ease-in-out',
     underline
