--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -4,7 +4,11 @@ import Link from '@/components/Link.astro'
 import { SITE } from '@/consts';
 ---
 
-<header role="banner" class="fixed top-0 left-0 right-0 z-50 py-5 backdrop-blur-sm">
+<header
+  role="banner"
+  class="fixed top-0 left-0 right-0 z-50 py-5 backdrop-blur-sm"
+  transition:persist
+>
   <Container>
     <div class="flex flex-wrap gap-y-2 justify-between">
       <Link
