--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -35,7 +35,7 @@ const years = Object.keys(posts).sort((a, b) => Number.parseInt(b) - Number.pars
 <PageLayout title={BLOG.TITLE} description={BLOG.DESCRIPTION}>
   <CollectionPageStructuredData
     slot="structured-data"
-    type="BlogPosting"
+    type="blog"
     name={BLOG.TITLE}
     description={BLOG.DESCRIPTION}
   />
