--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -15,7 +15,7 @@ const projects = (await getCollection('projects'))
 <PageLayout title={PROJECTS.TITLE} description={PROJECTS.DESCRIPTION}>
   <CollectionPageStructuredData
     slot="structured-data"
-    type="Article"
+    type="projects"
     name={PROJECTS.TITLE}
     description={PROJECTS.DESCRIPTION}
   />
