--- a/src/pages/art/[...slug].astro
+++ b/src/pages/art/[...slug].astro
@@ -4,6 +4,7 @@ import type { CollectionEntry } from 'astro:content'
 import ArtworkImage from '@/components/ArtworkImage.astro'
 import Container from '@/components/layout/Container.astro'
 import Subheader from '@/components/layout/Subheader.astro'
+import ArtworkStructuredData from '@/components/meta/ArtworkStructuredData.astro'
 import WebcomicViewer from '@/components/WebcomicViewer.astro'
 import PageLayout from '@/layouts/PageLayout.astro'
 import { Image } from 'astro:assets'
@@ -42,6 +43,8 @@ const links = artwork.data.links || []
 const firstImage = (Array.isArray(artwork.data.images)
   ? artwork.data.images[0]
   : artwork.data.images) as ImageMetadata
+
+const firstImageUrl = firstImage.src
 ---
 
 <PageLayout
@@ -52,6 +55,12 @@ const firstImage = (Array.isArray(artwork.data.images)
   isWebcomic={artwork.data.type === 'webcomic'}
   isContentPage={true}
 >
+  <ArtworkStructuredData
+    slot="structured-data"
+    artwork={artwork}
+    imageUrl={firstImageUrl}
+  />
+
   <!-- Preload first image -->
   <link
     rel="preload"
