--- a/src/components/meta/ArtworkStructuredData.astro
+++ b/src/components/meta/ArtworkStructuredData.astro
@@ -30,6 +30,7 @@ const schema = {
       'url': imageUrl,
       'width': 1200,
       'height': 630,
+      'caption': artwork.data.title,
     },
   ],
 }
