--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -6,7 +6,7 @@ import { SITE } from '@/consts';
 
 <header
   role="banner"
-  class="fixed top-0 left-0 right-0 z-50 py-5 backdrop-blur-sm"
+  class="fixed top-0 left-0 right-0 z-50 py-4 backdrop-blur-sm bg-base-100/80"
   transition:persist
 >
   <Container>
