--- a/src/components/meta/WebsiteStructuredData.astro
+++ b/src/components/meta/WebsiteStructuredData.astro
@@ -1,6 +1,7 @@
 ---
 import { generateBreadcrumbSchema, organizationSchema, personSchema, websiteSchema } from '@/lib/schema'
 
+// For homepage, we only need one item
 const breadcrumbItems = [
   { name: 'Home', item: 'https://fractalcounty.com/' },
 ]
