--- a/src/components/meta/Head.astro
+++ b/src/components/meta/Head.astro
@@ -1,6 +1,6 @@
 ---
 import { SITE } from '@consts'
-import { formatDateForOpenGraph } from '@lib/utils'
+import { formatDateForOpenGraph, getCanonicalUrl } from '@lib/utils'
 import { ViewTransitions } from 'astro:transitions'
 import { AstroFont } from 'astro-font'
 import { getImagePath } from 'astro-opengraph-images'
@@ -34,11 +34,12 @@ const {
 const openGraphImageUrl = image || getImagePath({ url: Astro.url, site: Astro.site })
 const defaultTags = ['chippledipple', 'fractal', 'county', 'art', 'gamedev']
 const combinedTags = Array.from(new Set([...tags, ...defaultTags]))
-const tagsContent = combinedTags.join(', ');
+const tagsContent = combinedTags.join(', ')
+const canonicalUrl = getCanonicalUrl(Astro.url.pathname)
 ---
 
 <SEO
-  canonical={Astro.url.href}
+  canonical={canonicalUrl}
   title={title}
   titleTemplate={`${SITE.NAME} | %s`}
   titleDefault={SITE.NAME}
@@ -142,6 +143,26 @@ const tagsContent = combinedTags.join(', ');
         content: '#000000',
         media: '(prefers-color-scheme: dark)',
       },
+      {
+        property: 'og:url',
+        content: canonicalUrl,
+      },
+      {
+        name: 'twitter:url',
+        content: canonicalUrl,
+      },
+      ...(type === 'article'
+? [
+        {
+          property: 'article:published_time',
+          content: publishedTime,
+        },
+        {
+          property: 'article:author',
+          content: `https://fractalcounty.com/#person`,
+        },
+      ]
+: []),
     ],
   }}
 />
